--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "electron .",
+    "debug": "electron . debug",
     "test": "standard **/*.js",
     "build-chals": "node lib/build-challenges.js",
     "build-pages": "node lib/build-pages.js",
@@ -25,8 +26,6 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
     "standard": "^10.0.2"
   },
   "dependencies": {
