created uac start js

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "private": true,
   "scripts": {
+    "uac": "node start.js",
     "lint": "eslint .",
     "start": "electron .",
     "test": "standard **/*.js",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "electron-packager": "^8.0.0",
-    "electron-prebuilt": "^1.2.6",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
@@ -40,6 +40,7 @@
     "electron-log": "^1.1.1",
     "glob": "^5.0.5",
     "handlebars": "^3.0.3",
+    "node-windows": "^0.1.14",
     "npm-path": "^2.0.3",
     "promise": "^7.1.1",
     "random-key": "^0.3.2",
