--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "private": true,
   "scripts": {
-    "start": "node start.js",
+    "start": "electron .",
     "lint": "eslint .",
     "debug": "electron . debug",
     "nouac": "electron .",
